# coffeetimer

./: CMakeLists.txt  Config.h  Display.cpp  Display.h  MotorControl.cpp  MotorControl.h  README.md  Storage.cpp  Storage.h  coffeetimer.cpp
3d_print/: Capacitor isolation bottom.stl  ESP32.stl  Lid.stl  Macap digital knob.f3d  Macap digital knob.stl  Macap digital.f3z  Power supply isolation.stl  Power supply.stl  Temporary Controls support.stl  macap base lower.stl  macap base.stl  macap controls.stl
lib/EasingLibrary/: EasingBase.cpp  LICENSE
resources/: bitmaps_grinder.h
